--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ uvicorn = "^0.34.0"
 aiosqlite = "^0.21.0"
 alembic = "^1.15.1"
 httpx = "^0.28.1"
+aiogram = "^3.19.0"
+xlsxwriter = "^3.2.2"
+dotenv = "^0.9.9"
+openpyxl = "^3.1.5"
 
 
 [build-system]
